<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Watch videos for free</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_short_title">InVideo</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_video_title">Upload an  video</string>
    <string name="upload_video">Upload an video</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Type here</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gallery">Videos</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="view">View</string>
    <string name="no_results">No results</string>
    <string name="submit">Submit</string>
    <string name="video_title">The title of video</string>
    <string name="user_title">Username</string>
    <string name="user_password">Password</string>
    <string name="sql_error">SQL ERROR. Please refresh the app</string>
    <string name="description">Description</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>