<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/videos" />
    </group>
    <group android:id="@+id/admin"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upload_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/upload_video" />
    </group>
    <group android:id="@+id/auth">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sign_up" />
    </group>
</menu>