<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/unit"
    tools:context=".ui.upload_video.UploadVideoFragment">
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:text="@string/add_video_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"/>
    <EditText
        android:id="@+id/titleVideo"
        android:layout_marginTop="@dimen/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_title"
        />
    <Button
        android:id="@+id/video_content"
        android:text="@string/upload_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="200dp"
        android:layout_marginTop="@dimen/unit_half"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        />
    <Button
        android:id="@+id/nav_upload_video"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/unit"
        />
</LinearLayout>