<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.videos.VideosFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.video.VideoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_video2" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_upload_video"
        android:name="com.example.myapplication.ui.upload_video.UploadVideoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_upload_video" />

    <fragment
        android:id="@+id/nav_setting_page"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_upload_video" />
</navigation>